fixed spacing on forecast

--- a/src/style.css
+++ b/src/style.css
@@ -53,11 +53,13 @@ body {
 ul {
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  gap: 110px;
+  padding: 0;
 }
 li {
   text-transform: uppercase;
   display: inline-block;
-  margin: 0 70px 70px;
+  /* margin: 0 70px 70px; */
   font-size: 30px;
 }
